--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,8 @@
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
-# to ignore the builds folder, uncomment these lines
-# /[Bb]uild/
-# /[Bb]uilds/
+/[Bb]uild/
+/[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
